# scheduler-app-rust

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml  workflow.asl.json
src/: enrich.rs  schedule-creator.rs
