[package]
name = "reminders-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.52.0"
aws-sdk-dynamodb = "0.19.0"
aws-sig-auth = "0.52.0"
aws-smithy-client = { version = "0.49.0", features = ["test-util"] }
aws-smithy-http = "0.52.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
aws_lambda_events = "0.7.2"
http = "0.2.8"
lambda_http = "0.6.1"
lambda_runtime = "0.7.2"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_19", "aws_lambda_events+0_7"] }
serde_json = "1.0.91"
tokio = { version = "1.21.1", features = ["full"] }

# Without this package explicitly defined here I got a weird error about cross compilation
openssl-sys = { version = "0.9.80", features = ["vendored"] }

[dev-dependencies]
aws-smithy-http = "0.49.0"

[features]
integration_tests = []
unit_tests = []

[[bin]]
name = "enrich-function"
path = "./src/enrich.rs"


[[bin]]
name = "schedule-creator-function"
path = "./src/schedule-creator.rs"
